--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             text-decoration: underline;
         }
     </style>
+    <meta name="google-site-verification" content="zLZtmNZpk_tQ4uXNyFlnHf00A--Y2i6GSJLSBublTB0" />
 </head>
 <body>
     <h1>Discover Stunning Bed Designs Useful Links</h1>
